--- a/server/package.json
+++ b/server/package.json
@@ -12,13 +12,16 @@
   "license": "ISC",
   "dependencies": {
     "@fastify/cors": "^8.2.0",
-    "@prisma/client": "^4.9.0",
+    "@prisma/client": "^4.10.0",
     "dayjs": "^1.11.7",
     "fastify": "^4.11.0",
+    "mongodb": "^5.0.0",
+    "prisma-client-lib": "^1.34.12",
+    "prisma-erd-generator": "^1.2.5",
     "zod": "^3.20.2"
   },
   "devDependencies": {
-    "prisma": "^4.9.0",
+    "prisma": "^4.10.0",
     "tsx": "^3.12.2",
     "typescript": "^4.9.4"
   },
