--- a/web/package.json
+++ b/web/package.json
@@ -9,9 +9,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/colors": "^0.1.8",
+    "@radix-ui/react-alert-dialog": "^1.0.2",
     "@radix-ui/react-checkbox": "^1.0.1",
     "@radix-ui/react-dialog": "^1.0.2",
     "@radix-ui/react-popover": "^1.0.3",
+    "@radix-ui/react-scroll-area": "^1.0.2",
+    "@stitches/react": "^1.2.8",
     "axios": "^1.2.4",
     "clsx": "^1.2.1",
     "dayjs": "^1.11.7",
