--- a/server/package.json
+++ b/server/package.json
@@ -13,14 +13,19 @@
   "dependencies": {
     "@fastify/cors": "^8.2.0",
     "@prisma/client": "^4.10.0",
+    "cors": "^2.8.5",
     "dayjs": "^1.11.7",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
     "fastify": "^4.11.0",
     "mongodb": "^5.0.0",
+    "mongoose": "^6.9.1",
     "prisma-client-lib": "^1.34.12",
     "prisma-erd-generator": "^1.2.5",
     "zod": "^3.20.2"
   },
   "devDependencies": {
+    "nodemon": "^2.0.20",
     "prisma": "^4.10.0",
     "tsx": "^3.12.2",
     "typescript": "^4.9.4"
